--- a/css/snake.css
+++ b/css/snake.css
@@ -4,20 +4,33 @@ html, body, figure, figcaption, ul, li {
   border: 0;
 }
 
+canvas {
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  z-index:-1;
+}
+
 ul {
   list-style: none;
+}
+
+.background {
+  background-image: url("../images/snake_skin_background.png");
+  /*height: 120px;*/
 }
 
 body {
   font-family: sans-serif;
   text-align: center;
-  background-image: url("../images/snake_skin_background.png");
 }
 
 .logo {
   font-size: 70px;
-  width: 340px;
-  height: 130px;
+  width: 310px;
+  height: 110px;
 }
 
 h3.length {
@@ -30,6 +43,11 @@ figure {
   border: 10px solid #4A4A4A;
   border-radius: 10px;
   background-color: white;
+}
+
+.message {
+  font-size: 18px;
+  color: #4A4A4A;
 }
 
 ul {
