Changed class name for bold, purple words

--- a/css/snake.css
+++ b/css/snake.css
@@ -35,9 +35,8 @@ figure {
   background-color: white;
 }
 
-.game-over {
+.bold-purple {
   font-size: 28px;
-  font-weight: bold;
   color: #942C8D;
 }
 
