--- a/css/snake.css
+++ b/css/snake.css
@@ -15,13 +15,14 @@ body {
 
 .logo {
   width: 360px;
-  height: 130px;
+  height: 120px;
   opacity: 0.7;
 }
 
 h3.length {
   color: #942C8D;
   font-size: 24px;
+  opacity: 0.7;
 }
 
 h3 span#length {
@@ -51,9 +52,6 @@ figure {
   color: #5A5A5A;
 }
 
-ul {
-}
-
 ul:after {
   content: "";
   clear: both;
@@ -72,17 +70,7 @@ li {
   opacity: 0.7;
 }
 
-.snake {
-  -webkit-animation: mysecond 5s linear 0s infinite alternate;
-  animation: mysecond 5s linear 0s infinite alternate;
-}
-
-.drunk-snake {
-  -webkit-animation: mysecond 5s linear 0s infinite alternate;
-  animation: mysecond 5s linear 0s infinite alternate;
-}
-
-.apple, .magic-apple, .magic {
+.snake, .drunk-snake, .apple, .magic-apple, .magic {
   -webkit-animation: mysecond 5s linear 0s infinite alternate;
   animation: mysecond 5s linear 0s infinite alternate;
 }
