--- a/css/snake.css
+++ b/css/snake.css
@@ -41,10 +41,17 @@ figure {
   background-color: #FAF6FF;
 }
 
-.bold-purple {
+.big-blue {
   font-size: 56px;
-  -webkit-animation: myfourth 5s linear 0s infinite alternate;
-  animation: myfourth 5s linear 0s infinite alternate;
+  color: #42B3EB;
+  opacity: 0.7;
+}
+
+.big-black {
+  font-size: 28px;
+  color: black;
+  opacity: 0.7;
+  font-weight: bold;
 }
 
 .message {
@@ -64,6 +71,10 @@ li {
   height: 20px;
 }
 
+.how {
+  font-size: 24px;
+}
+
 .beer, .bourbon, .moonshine, .vodka,
 .martini, .appletini, .margarita {
   background-image: url("../images/alcohol.png");
@@ -71,6 +82,14 @@ li {
 }
 
 .snake, .drunk-snake, .apple, .magic, .magic-apple {
+  -webkit-animation: mysecond 5s linear 0s infinite alternate;
+  animation: mysecond 5s linear 0s infinite alternate;
+}
+
+.magic-square {
+  height: 21px;
+  width: 25px;
+  display: inline-block;
   -webkit-animation: mysecond 5s linear 0s infinite alternate;
   animation: mysecond 5s linear 0s infinite alternate;
 }
